use required attribute to indicate to orval if optional or required
