# Api/Requests/MainCanopyRequest.cs
@@ -2,25 +2,30 @@
 
 namespace Api.Requests;
 
+using System.ComponentModel.DataAnnotations;
+
 /// <summary>
 /// Create body for a main canopy.
 /// </summary>
-public class CreateMainCanopyRequest
+public class CreateMainCanopyRequest(string manufacturer, string model, int size)
 {
   /// <summary>
   /// Gets or sets the manufacturer of the canopy.
   /// </summary>
-  required public string Manufacturer { get; set; }
+  [Required]
+  public string Manufacturer { get; set; } = manufacturer;
 
   /// <summary>
   /// Gets or sets the model of the canopy.
   /// </summary>
-  required public string Model { get; set; }
+  [Required]
+  public string Model { get; set; } = model;
 
   /// <summary>
   /// Gets or sets the size of the canopy in square feet.
   /// </summary>
-  required public int Size { get; set; }
+  [Required]
+  public int Size { get; set; } = size;
 }
 
 /// <summary>
